[package]
name = "backup"
version = "0.1.0"
edition = "2021"
license = "MIT"
build = "build.rs"
repository = "https://github.com/BoltzExchange/backup"

[profile.release]
strip = true
opt-level = 2
lto = true
codegen-units = 1
panic = "abort"

[features]
default = ["s3", "webdav"]
webdav = ["reqwest_dav"]
s3 = ["rust-s3"]

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.83"
chrono = "0.4.39"
cln-plugin = "0.3.0"
cln-rpc = "0.3.0"
flate2 = "1.0.35"
log = "0.4.22"
reqwest_dav = { version = "0.1.14", optional = true, features = ["native-tls"] }
rust-s3 = { version = "0.35.1", optional = true }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "sync", "rt"] }

[build-dependencies]
built = { version = "0.7.5", features = ["git2"] }
