[package]
name = "backup"
version = "0.1.1"
edition = "2021"
license = "MIT"
build = "build.rs"
repository = "https://github.com/BoltzExchange/cln-backup"

[profile.release]
strip = true
opt-level = 2
lto = true
codegen-units = 1
panic = "abort"

[features]
default = ["s3", "webdav"]
webdav = ["reqwest_dav"]
s3 = ["rust-s3"]

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
chrono = "0.4.41"
cln-plugin = "0.4.0"
cln-rpc = "0.4.0"
flate2 = "1.1.1"
log = "0.4.27"
reqwest_dav = { version = "0.2.1", optional = true, features = ["rustls-tls"] }
rust-s3 = { version = "0.35.1", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "rt",
] }

[build-dependencies]
built = { version = "0.8.0", features = ["git2"] }
