[package]
name = "backup"
version = "0.1.2"
edition = "2024"
license = "MIT"
build = "build.rs"
repository = "https://github.com/BoltzExchange/cln-backup"

[profile.release]
strip = true
opt-level = 2
lto = true
codegen-units = 1
panic = "abort"

[features]
default = ["s3", "webdav"]
webdav = ["reqwest_dav"]
s3 = ["rust-s3"]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = "0.4.42"
cln-plugin = "0.5.0"
cln-rpc = "0.5.0"
flate2 = "1.1.5"
futures = "0.3.31"
log = "0.4.29"
reqwest_dav = { version = "0.2.2", optional = true, default-features = false, features = [
    "rustls-tls",
] }
rust-s3 = { version = "0.37.1", optional = true, default-features = false, features = [
    "tokio-rustls-tls",
    "tags",
    "fail-on-err",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "rt",
] }
toml = "0.9.10"

[build-dependencies]
built = { version = "0.8.0", features = ["git2"] }
